--- a/ansible/reddit_db.yml
+++ b/ansible/reddit_db.yml
@@ -7,24 +7,22 @@
   tasks:
     - name: Add MongoDB repo key
       apt_key:
-        url: https://www.mongodb.org/static/pgp/server-4.0.asc
+        url: https://www.mongodb.org/static/pgp/server-4.2.asc
         state: present
 
     - name: Add MongoDB repo
       apt_repository:
-        repo: deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse
+        repo: deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.2 multiverse
         state: present
-        filename: mongodb-org-4.0.list        
+        filename: mongodb-org-4.2.list
 
     - name: Install MongoDB package
       apt:
         update_cache: yes
-        pkg: mongodb-org
+        name: mongodb-org
         state: present
-      notify: start mongod
 
     - name: Enable MongoDB service
-      systemd: name=mongod enabled=yes
-  handlers:
-    - name: start mongod
-      systemd: name=mongod state=started
+      systemd:
+        name: mongod
+        enabled: yes
