--- a/ansible/reddit_app.yml
+++ b/ansible/reddit_app.yml
@@ -1,19 +1,12 @@
-# Setup and configure ruby things for reddit app
-- name: "Reddit App: Configure app environment"
+- name: Configure hosts & deploy application
   hosts: all
-  gather_facts: no
-  become: yes
-
+  vars:
+    mongo_bind_ip: 0.0.0.0
   tasks:
-  - name: Install ruby and rubygems and required packages
-    apt: "name={{ item }} state=present"
-    with_items:
-      - ruby-full
-      - ruby-dev
-      - build-essential
-
-  - name: Install Ruby bundler
-    gem:
-      name: bundler
-      state: present
-      user_install: no        
+    - name: Change mongo config file
+      become: true
+      template:
+        src: templates/mongod.conf.j2
+        dest: /etc/mongod.conf
+        mode: 0644
+      tags: db-tag
