--- a/ansible/reddit_app.yml
+++ b/ansible/reddit_app.yml
@@ -34,6 +34,20 @@
         enabled: yes
       tags: app-tag
 
+    - name: Fetch the latest version of application code
+      git:
+        repo: 'https://github.com/Artemmkin/reddit.git'
+        dest: /home/appuser/reddit
+        version: monolith
+      tags: deploy-tag
+    
+    - name: Bundle install
+      bundler:
+        state: present
+        chdir: /home/appuser/reddit
+      notify: restart puma  
+      tags: deploy-tag
+
   handlers:
     - name: restart mongod
       become: true
@@ -46,3 +60,9 @@
       systemd:
         name: puma
         state: reloaded
+
+    - name: restart puma
+      become: true
+      systemd:
+        name: puma
+        state: restarted
