--- a/ansible/reddit_app_multiple_plays.yml
+++ b/ansible/reddit_app_multiple_plays.yml
@@ -18,7 +18,7 @@
         name: mongod
         state: restarted      
 
-- name: Configure hosts & deploy application
+- name: Configure App
   hosts: app
   tags: app-tag
   become: true
